[project]
name = "makeathon"
version = "0.1.0"
description = "Add your description here"
dependencies = [
    "jupyter>=1.1.1",
    "ipykernel>=6.29.5",
    "unstructured[all-docs]>=0.17.2",
    "qdrant-client>=1.14.2",
    "transformers>=4.52.3",
    "datasets>=3.6.0",
    "torchaudio>=2.7.0",
    "pydub>=0.25.1",
    "ffmpeg-python>=0.2.0",
    "openai>=1.82.0",
    "streamlit>=1.45.1",
    "streamlit-chat>=0.1.1",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/makeathon"]
